vmimported/00-vmimported-setup/00-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    vm.kubevirt.io/name: database
  type: ClusterIP
  ports:
  - name: mysql
    protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    env: webapp
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
