vmimported/00-vmimported-setup/01-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-webapp
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: webapp
    weight: 100
  wildcardPolicy: None
